@startuml
skinparam monochrome true
skinparam shadowing true
skinparam classAttributeIconSize 0

class Maze {
  - width: int
  - height: int
  - grid: boolean[][]
  - playerPosition: Position
  + Maze(width: int, height: int, wallPercentage: int)
  + movePlayer(direction: String)
}

class Player {
  - name: String
  - score: int
  + Player(name: String)
  + addScore(points: int)
}

class PlayerProgression {

}

Player <|-- PlayerProgression

class PlayerProgress {
  + markChallengeCompleted(challenge: Challenge)
}

class Position {
  - x: int
  - y: int
  + Position(x: int, y: int)
}

abstract class GameMode {
  + start()
  + createMaze(): Maze
}

class FreeMode {
  + start()
  + createMaze(): Maze
}

class ProgressionMode {
  + start()
  + createMaze(): Maze
  + loadProgress(progress: PlayerProgress)
}

class Stage {
  - number: int
  + Stage(number: int)
}

class Challenge {
  - difficulty: String
  - width: int
  - height: int
  - wallPercentage: int
  - completed : boolean
  + Challenge(difficulty: String)
  + validate()
}

class Main {
  startGame(player: Player) : GameMode
  movePlayer()
  'displayProgress(player: Player)'
}

class PlayerDatabase {
  {static} + savePlayer(player: Player)
  {static} + loadPlayer(name: String): Player
  {static} + playerExists(name: String): boolean
}

Maze --> "playerPosition" Position

FreeMode --> "player" Player
ProgressionMode --> "player" PlayerProgression
GameMode --> "currentMaze" Maze

GameMode <|-- FreeMode
GameMode <|-- ProgressionMode
Stage --> "challenges 3" Challenge

PlayerProgression --> "progress" PlayerProgress
PlayerProgress --> "stageProgress 3" Stage 
@enduml
